[package]
name = "actix-cors"
version = "0.2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Cross-origin resource sharing (CORS) for Actix applications."
readme = "README.md"
keywords = ["web", "framework"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-cors/"
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "actix_cors"
path = "src/lib.rs"

[dependencies]
actix-web = "2.0.0-alpha.5"
actix-service = "1.0.0"
derive_more = "0.99.2"
futures = "0.3.1"

[dev-dependencies]
actix-rt = "1.0.0"
