[package]
name = "actix-files"
version = "0.6.0-beta.7"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Static file serving for Actix Web"
keywords = ["actix", "http", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web"
categories = ["asynchronous", "web-programming::http-server"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_files"
path = "src/lib.rs"

[features]
io-uring = ["actix-web/io-uring", "tokio-uring"]

[dependencies]
actix-web = { version = "4.0.0-beta.9", default-features = false }
actix-http = "3.0.0-beta.10"
actix-service = "2.0.0"
actix-utils = "3.0.0"

askama_escape = "0.10"
bitflags = "1"
bytes = "1"
futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
http-range = "0.1.4"
derive_more = "0.99.5"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.1"
percent-encoding = "2.1"
pin-project-lite = "0.2.7"

tokio-uring = { version = "0.1", optional = true }

[dev-dependencies]
actix-rt = "2.2"
actix-web = "4.0.0-beta.9"
actix-test = "0.1.0-beta.3"
