[package]
name = "actix-files"
version = "0.6.0-beta.16"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "fakeshadow <24548779@qq.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Static file serving for Actix Web"
keywords = ["actix", "http", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web"
categories = ["asynchronous", "web-programming::http-server"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_files"
path = "src/lib.rs"

[features]
experimental-io-uring = ["actix-web/experimental-io-uring", "tokio-uring"]

[dependencies]
actix-http = "3.0.0-rc.4"
actix-service = "2"
actix-utils = "3"
actix-web = { version = "4.0.0-rc.3", default-features = false }

askama_escape = "0.10"
bitflags = "1"
bytes = "1"
derive_more = "0.99.5"
futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
http-range = "0.1.4"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.1"
percent-encoding = "2.1"
pin-project-lite = "0.2.7"

tokio-uring = { version = "0.2", optional = true, features = ["bytes"] }

[dev-dependencies]
actix-rt = "2.2"
actix-test = "0.1.0-beta.13"
actix-web = "4.0.0-rc.3"
tempfile = "3.2"
