[package]
name = "actix-identity"
version = "0.2.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Identity service for actix web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-identity/"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_identity"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "3.0.0", path = "..", default-features = false, features = ["secure-cookies"] }
actix-service = "1.0.5"
futures = "0.3.1"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.2.5", default-features = false, features = ["std"] }

[dev-dependencies]
actix-rt = "1.0.0"
actix-http = { version = "2.0.0", path = "../actix-http" }
bytes = "0.5.4"
